--- a/index.html
+++ b/index.html
@@ -94,43 +94,45 @@
                 </div>
                 <div class="column right">
                     <p>Social Micro Finance is an Islamic economic based investment company in Bangladesh. Its aim is to work for implementing the 17 Sustainable Development Goals (The SDGs are no poverty, zero hunger, good health and well-being, quality education, gender equality, clean water and sanitation, affordable and clean energy, decent work and economic growth, industry, innovation and infrastructure, reduced inequalities, sustainable cities and communities, responsible consumption and production, climate action, life below water, life on land, peace, justice, and strong institutions and partnerships for the goals), increasing purchasing power of the customer, controlling the inflation rate and also establishing a sustainable investment policy all over the world. Social Micro Finance started pilot operation on Thursday 30-July-2020 AD and 8-ZilHaj, 1441 Hijri. On 20-July-2023, Thursday, 1-Muharram-1445 Hijri, Prof. Dr. Mohammad Mahbubur Rahman and Muid Khan inaugurated the program at Jhenaidah Baitun Noor Jame Mosque. Later on, Friday, August 18, 2023, the official proceedings began on the 1st of the month of Safar, 1445 Hijri. This company is the reflection of the research jointly made by Dr. Muhammad Mahbubur Rahman & Muid Khan. The mission of the company is to establish the "Qarrj Hasana" which is an interest-free loan giving system according to the holy Quran and also establish “Peace, Justice and Strong Institutions”, according to the United Nations SDG-16. The vision of the company is to establish an Islamic and ethical Investment system, achieving 17 Sustainable development goals and proper utilization of solar energy in an environment friendly manner with prosperous human resources, society and economy.</p>
-                    <!-- <a href="#">Read More</a> -->
-                </div>
-            </div>
-        <!-- </div> -->
-    <!-- </section>
-    <section class="service"> -->
-        <h2 class="title" id="section-header">Our Services</h2>
-        <div class="boxes-container">
-            <div class="box">
-                <div class="image-container">
-                    <img src="qaarj.jpeg" alt="Image 1">
-                    <div class="intro">Qaarj Hasana</div>
-                    <div class="details">This is a Mosque-based program where an account holder can make a monthly savings of BDT 30, and seek for interest-free loan as Qarrj Hasana, which can exceed their existing savings. </div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="image-container">
-                    <img src="zakat.jpeg" alt="Image 2">
-                    <div class="intro">Zakat</div>
-                    <div class="details">This program is also a mosque-based one where people with financial capability will deposit their Zakat amount in the mosque fund, and it will be distributed equally among the needy people.</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="image-container">
-                    <img src="ie.jpeg" alt="Image 3">
-                    <div class="intro">Islamic Employment</div>
-                    <div class="details">Training and investment will be arranged for the entrepreneurs, making a sustainable interest-free deal with the investors.</div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="image-container">
-                    <img src="skill.png" alt="Image 4">
-                    <div class="intro">Skill Assesment</div>
-                    <div class="details">This program will empower youth with the post-training assessment.</div>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="service">
+        <div class="max-width">
+            <h2 class="title" id="section-header">Our Services</h2>
+            <div class="boxes-container">
+                <div class="box">
+                    <div class="image-container">
+                        <img src="qaarj.jpeg" alt="Image 1">
+                        <div class="intro">Qaarj Hasana</div>
+                        <div class="details">This is a Mosque-based program where an account holder can make a monthly savings of BDT 30, and seek for interest-free loan as Qarrj Hasana, which can exceed their existing savings. </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image-container">
+                        <img src="zakat.jpeg" alt="Image 2">
+                        <div class="intro">Zakat</div>
+                        <div class="details">This program is also a mosque-based one where people with financial capability will deposit their Zakat amount in the mosque fund, and it will be distributed equally among the needy people.</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image-container">
+                        <img src="ie.jpeg" alt="Image 3">
+                        <div class="intro">Islamic Employment</div>
+                        <div class="details">Training and investment will be arranged for the entrepreneurs, making a sustainable interest-free deal with the investors.</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image-container">
+                        <img src="skill.png" alt="Image 4">
+                        <div class="intro">Skill Assesment</div>
+                        <div class="details">This program will empower youth with the post-training assessment.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </section>
 
     <footer>
